<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bst.stockahm.UpdateStockDetails"
    android:background="@color/background_color">

     <Button
        android:id="@+id/btnUpdateStock"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:onClick="onclickUpdateStockBtn"
        android:text="@string/updateStock"
         android:background="@color/white"
         android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:text="@string/txtCompanyName"
        android:textColor="@color/black"
       />

    <TextView
        android:id="@+id/esettextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/na"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:text="@string/txtbuySell"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/esettextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/na"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/esettextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/na"
        android:textColor="@color/black"
         />

    <EditText
        android:id="@+id/esetView10"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:textColor="@color/black"
   />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:text="@string/txtSL"
        android:textColor="@color/black"
     />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="10dp"
        android:text="@string/txtExitPrice"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="10dp"
        android:text="@string/txtTredingSL"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/esetView18"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="10dp"
        android:text="@string/txtCurrentPrice"
        android:textColor="@color/black"
       />

    <EditText
        android:id="@+id/esetView02"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/txtCreationDt"
        android:textColor="@color/black"
       />

    <TextView
        android:id="@+id/esettextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/na"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/txtStatus"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/etestextView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView15"
        android:layout_alignEnd="@+id/btnUpdateStock"
        android:layout_alignRight="@+id/btnUpdateStock"
        android:layout_centerVertical="true"
 		android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/na"
        android:textColor="@color/black"/>

</RelativeLayout>
