<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context="com.bst.stockahm.AddStockDetails" >

    	<LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:orientation="vertical">

                    <EditText android:id="@+id/companyName" 
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:hint="@string/companyName" 
                        android:maxLength="20"
                        android:maxLines="1" 
                        android:layout_marginBottom="20dp"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black" >
                        
                        <requestFocus />
                    </EditText>

                    <Spinner
					    android:id="@+id/buysell_spinner"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"/>
                    
                    <EditText android:id="@+id/buySell" 
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:hint="@string/buySell"
                        android:inputType="number"
                        android:maxLines="1" 
                        android:layout_marginBottom="20dp"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"  />

                 
                     <EditText android:id="@+id/sl" 
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                        android:hint="@string/sl"
                        android:maxLines="1" 
                        android:layout_marginBottom="20dp"
                        android:inputType="number"
                         android:textColorHint="@color/black"
                         android:textColor="@color/black" />
                     

                    <Button android:id="@+id/addStock_button"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="match_parent" 
                        android:layout_height="wrap_content"
                        android:text="@string/txtAdd"
                        android:background="@color/white"
                        android:textColor="@color/black"
                       android:onClick="onClickAddStockButton"/>

                </LinearLayout>
    
</RelativeLayout>
