<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#3C5A99"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:textColor="#ffffffff" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:visibility="gone" />
        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:orientation="vertical">

                    <EditText android:id="@+id/etUserName" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/txtuName" 
                        android:maxLength="10"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffff"
                        android:textColor="#ffffff" />

                    <EditText android:id="@+id/etPassword" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/txtpassword"
                        android:imeActionLabel="@string/txtLogin"
                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffff"
                        android:textColor="#ffffff" />

                    <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                        android:layout_width="match_parent" 
                        android:layout_height="wrap_content"
                        android:text="@string/txtLogin"
                        android:textStyle="bold"
                        android:textColor="#ffffff"
                        android:background="#01c1cc" 
                       android:onClick="onClickLoginButton"/>

                    <TextView
                        android:id="@+id/link_to_register"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dip"
                        android:layout_marginTop="20dip"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="#0b84aa" />
                    
                </LinearLayout>
              
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    
</LinearLayout>